[package]
name = "buzz-rust"
version = "0.2.0"
authors = ["rdettai <contact@cloudfuse.io>"]
edition = "2018"
build = "build.rs"

[lib]
name = "buzz"

[[bin]]
name = "integ"
path = "src/bin/main_integ.rs"

[[bin]]
name = "hcomb"
path = "src/bin/main_hcomb.rs"

[[bin]]
name = "hbee_local"
path = "src/bin/main_hbee_local.rs"

[[bin]]
name = "hbee_lambda"
path = "src/bin/main_hbee_lambda.rs"

[[bin]]
name = "hbee_tests"
path = "src/bin/main_hbee_tests.rs"

[[bin]]
name = "fuse_local"
path = "src/bin/main_fuse_local.rs"

[[bin]]
name = "fuse_lambda"
path = "src/bin/main_fuse_lambda.rs"

[dependencies]
arrow = { version = "47.0.0" }
arrow-parquet = { package = "parquet", version = "47.0.0", features = ["arrow"] }
datafusion = "33.0.0"
arrow-flight = { version = "47.0.0" }
deltalake = { version = "0.16.5" }
chrono = { version = "0.4" }
tokio = { version = "1.0", features = ["fs", "macros", "io-std"] }
tokio-stream = { version = "0.1.2" }
rusoto_core = { version = "0.48.0", default_features = false, features=["rustls"] }
rusoto_s3 = { version = "0.48.0", default_features = false, features=["rustls"] }
rusoto_lambda = { version = "0.48.0", default_features = false, features=["rustls"] }
rusoto_ecs = { version = "0.48.0", default_features = false, features=["rustls"] }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lambda_runtime = "0.8.2"
tonic = "0.10.2"
pin-project = "1.0"
prost = "0.12.1"
prost-types = "0.12.1"
hyper = { version = "0.14.2", features = ["stream"] }
base64 = { version = "0.21.4" }
envy = {version = "0.4" }

[build-dependencies]
prost-build = { version = "0.12.1" }